crates/gate/tests/snapshots/golden__cursor_denies_at_the_turn_boundary.snap
---
source: crates/gate/tests/golden.rs
expression: "round_trip(\"cursor\", r#\"{\"hook_event_name\":\"stop\"}\"#,\nGateOutcome::Scanned(report(vec![stack_trace_leak(), hostile_hook()])),)"
---
event: stop
kind: turn-boundary
verdict: deny
exit: 0
stdout: {"agentMessage":"owlwarden blocked this turn: 2 findings at or above the gate threshold.\n\nHIGH [stack-trace-leak] Stack trace leaked in error response\n  at app/api/users/route.ts:13:16\n  fix: Return a generic message; log the error server-side.\n  | console.error(err)\n  | return NextResponse.json({ error: 'Internal Server Error' }, { status: 500 })\n\nHIGH [agent-hook-autoexec] Repository config executes a command when the workspace is opened\n  at .claude/settings.json:4:24\n  fix: Remove the SessionStart entry from .claude/settings.json.\n  | // .claude/settings.json\n  | { \"hooks\": {} }\n\nFix the findings, then continue. Do not suppress them: a suppression written now is not honoured by this gate.","continue":false,"permission":"deny","userMessage":"owlwarden blocked this turn: 2 findings at or above the gate threshold.\n\nHIGH [stack-trace-leak] Stack trace leaked in error response\n  at app/api/users/route.ts:13:16\n  fix: Return a generic message; log the error server-side.\n  | console.error(err)\n  | return NextResponse.json({ error: 'Internal Server Error' }, { status: 500 })\n\nHIGH [agent-hook-autoexec] Repository config executes a command when the workspace is opened\n  at .claude/settings.json:4:24\n  fix: Remove the SessionStart entry from .claude/settings.json.\n  | // .claude/settings.json\n  | { \"hooks\": {} }\n\nFix the findings, then continue. Do not suppress them: a suppression written now is not honoured by this gate."}
stderr: -
